--- a/client/src/components/movies/movies.css
+++ b/client/src/components/movies/movies.css
@@ -1,3 +1,7 @@
+.ui.attached.button {
+  margin-top: 55px;
+  margin-left: 10px;
+}
 .posterImg {
   cursor: pointer;
 }
@@ -5,11 +9,10 @@
 .deleteIcon {
   cursor: pointer;
 }
+
 .popup {
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 10;
-
-  /* background-size: 80% 90%; */
   position: fixed;
   width: 100%;
   height: 100%;
