styling for popup and popupdb

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -175,7 +175,7 @@ img {
 }
 
 .bg-dark {
-  background-color: rgba(71, 8, 119, 0.7) !important;
+  background-color: #470877 !important;
 }
 
 a.bg-dark:hover,
