fixed bug with authorization and cleanup of console.log + styling for admin

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,7 +65,7 @@ img {
   flex: 0 0 100%;
   max-width: 100%;
 }
-.container {
+.containerApp {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
