--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,8 +67,9 @@ img {
 }
 .containerApp {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0;
+  /* padding-right: 15px; */
+  /* padding-left: 15px; */
   margin-right: auto;
   margin-left: auto;
 }
