--- a/client/src/components/movies/movies.css
+++ b/client/src/components/movies/movies.css
@@ -9,6 +9,15 @@ div.containerAddmovie {
   max-width: 65rem;
 }
 
+.crowRating {
+  /* border: 1px solid white; */
+  font-weight: 400;
+  margin-left: 10px;
+  min-width: 3rem;
+  display: inline-block;
+  padding: 1px 10px;
+}
+
 .ui.basic.purple.button,
 .ui.basic.purple.buttons .button {
   position: relative;
@@ -36,18 +45,50 @@ div.containerAddmovie {
   cursor: pointer;
 }
 
+.title {
+  color: white;
+}
+
 .popup {
-  padding: 20px;
+  padding: 50px 20px;
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 10;
   position: fixed;
-  /* width: 80%;*/
+  width: 100%;
+  height: 90%;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  border: 1px solid whitesmoke;
+  overflow-y: scroll;
+  /* padding: 20px;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 10;
+  position: fixed;
+  /* width: 80%;
   height: 70%;
   top: 10%;
   left: 50%;
   transform: translate(-50%, 0);
   border: 1px solid whitesmoke;
-  overflow-y: scroll;
+  overflow-y: scroll; */
+}
+
+.ui.inverted.black.segment {
+  position: sticky;
+  z-index: 2;
+}
+
+.ui.small.image {
+  width: 150px;
+  height: auto;
+  position: relative;
+  left: 33rem;
+  top: -17rem;
+}
+.imgPosition {
+  margin-left: 10rem;
 }
 .containerInPopup {
   color: ghostwhite;
@@ -55,8 +96,14 @@ div.containerAddmovie {
 }
 
 .descriptionContainer {
-  margin-right: 50px;
-  width: 35rem;
+  /* margin-right: 50px; */
+  width: 60rem;
+  position: relative;
+  left: 0;
+  /* float: left;   */
+}
+p.description {
+  width: 50rem;
 }
 
 [contenteditable="true"]:active,
@@ -75,4 +122,5 @@ div.containerAddmovie {
 }
 .imageBorder {
   border: 1px solid whitesmoke;
+  float: right;
 }
