--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,8 @@
 
 body {
   /* background-color: ghostwhite; */
-  background-color: #f8f8ff;
+  /* background-color: #f8f8ff; */
+  background-color: black;
 }
 img {
   width: 100%;
@@ -66,13 +67,23 @@ img {
   max-width: 100%;
 }
 .containerApp {
+  /* width: 100%;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #f8f8ff;
+  margin-right: auto;
+  margin-left: auto; */
   width: 100%;
-  padding: 0;
+  /* padding-top: 3rem; */
+  padding-bottom: 6rem;
+  /* background-color: #f8f8ff; */
+  background-color: black;
   /* padding-right: 15px; */
-  /* padding-left: 15px; */
+  margin-bottom: -45px;
   margin-right: auto;
   margin-left: auto;
 }
+
 .text-center {
   text-align: center !important;
 }
@@ -176,6 +187,8 @@ img {
   color: #fff;
 }
 
+footer {
+}
 .bg-dark {
   background-color: #470877 !important;
 }
