--- a/client/src/components/admin/monMovies/monMovies.css
+++ b/client/src/components/admin/monMovies/monMovies.css
@@ -1,5 +1,62 @@
 div.containerMonMovies {
   /* position: relative; */
-  margin-left: 285px;
-  max-width: 65rem;
+  margin-left: 30rem;
+  width: 65rem;
+  /* width: 100%; */
+  /* margin-top: 0rem; */
+  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  background-color: #f8f8ff;
+}
+
+.ui.segment.monMovieList {
+  padding-bottom: 9rem;
+  margin-bottom: -6rem;
+
+  max-width: 100%;
+}
+.prevSubMonMovie {
+  background-color: #f8f8ff;
+  width: 70rem;
+  padding-top: 5rem;
+  padding-bottom: 10rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  /* border: 2px solid pink; */
+  margin-left: -10rem;
+}
+.containerMonMoviesCreate {
+  /* position: relative; */
+  margin: 0 40rem;
+  width: 50rem;
+  /* width: 100%; */
+  margin-top: 5rem;
+  margin-bottom: -2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  /* position: relative; */
+  background-color: #f8f8ff;
+  /* border: 3px solid pink; */
+}
+
+.containerMonMoviesCreateBackground {
+  /* position: relative; */
+  /* margin: 0 40rem;
+  width: 50rem; */
+  /* width: 100%; */
+  /* margin-top: 2rem;
+  margin-bottom: -2rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  position: relative; */
+  background-color: #f8f8ff;
+  margin-top: -5rem;
+  height: 55rem;
+  margin-bottom: -7rem;
+}
+.ui.segment:last-child {
+  margin-bottom: -6rem;
+  padding-bottom: 5rem;
 }
