--- a/client/src/components/movies/movies.css
+++ b/client/src/components/movies/movies.css
@@ -1,14 +1,42 @@
 div.containerMovies {
   /* position: relative; */
-  margin-left: 285px;
-  max-width: 65rem;
+  margin-left: 30rem;
+  max-width: 60rem;
 }
 div.containerAddmovie {
   /* position: relative; */
-  margin-left: 285px;
-  max-width: 65rem;
-}
+  /* padding-left: 30rem; */
+  margin-left: 30rem;
+  /* padding-right: 8rem; */
+  padding-bottom: 8rem;
+  /* margin-left: 19rem; */
+  max-width: 60rem;
+  min-height: 50rem;
+  margin-bottom: -10rem;
 
+  /* border: 3px solid purple; */
+}
+div.addmovieDiv {
+  background-color: #f8f8ff;
+  padding-bottom: 8rem;
+  margin-bottom: -7rem;
+}
+div.movies {
+  background-color: #f8f8ff;
+  padding-bottom: 8rem;
+  margin-bottom: -7rem;
+}
+div.addMovie {
+  background-color: #f8f8ff;
+  padding-bottom: 8rem;
+  margin-bottom: -7rem;
+}
+.ui.input.movieSearch {
+  width: 40rem;
+}
+div.searchContainer {
+  text-align: center;
+}
 .crowRating {
   /* border: 1px solid white; */
   font-weight: 400;
@@ -40,15 +68,20 @@ div.containerAddmovie {
 .boldSpan {
   font-weight: 700;
 }
-.editIcon,
-.deleteIcon {
-  cursor: pointer;
-}
 
-.title {
-  color: white;
+h1.title {
+  padding-top: 2rem;
+  color: black;
 }
-
+.ui.purple.basic.button.loadMoreBtn {
+  margin-top: 5rem;
+  width: 20rem;
+}
+.loadMoreBtnContainer {
+  /* border: 2px solid purple; */
+  text-align: center;
+  margin-left: 10rem;
+}
 .popup {
   padding: 50px 20px;
   background-color: rgba(0, 0, 0, 0.9);
@@ -80,13 +113,13 @@ div.containerAddmovie {
   z-index: 2;
 }
 
-.ui.small.image {
+/* .ui.small.image {
   width: 150px;
   height: auto;
   position: relative;
   left: 33rem;
   top: -17rem;
-}
+} */
 .imgPosition {
   margin-left: 10rem;
 }
