--- a/client/src/components/users/users.css
+++ b/client/src/components/users/users.css
@@ -1,8 +1,28 @@
 div.containerMembers {
   /* position: relative; */
-  margin-left: 285px;
-  max-width: 65rem;
+  margin-left: 30rem;
+  max-width: 60rem;
 }
 div.members {
   background-color: #f8f8ff;
+  padding-bottom: 8rem;
+  margin-bottom: -7rem;
+}
+.userIconPointer {
+  cursor: pointer;
+}
+.ui.items > .item .meta.ItemEmail {
+  /* margin-top: 2rem; */
+}
+.loadMoreBtnContainer {
+  /* border: 2px solid purple; */
+  text-align: center;
+  margin-left: 10rem;
+}
+h1.title {
+  padding-top: 2rem;
+  color: black;
+}
+.ui.input.userSearch {
+  width: 40rem;
 }
