--- a/client/src/components/main/movieBackdropDisplay.css
+++ b/client/src/components/main/movieBackdropDisplay.css
@@ -10,6 +10,9 @@
   height: 100%;
   width: 100%;
   background-color: black;
+  box-shadow: inset 0 -190px 100px -10px rgb(0, 0, 0);
+  -webkit-box-shadow: inset 0 -190px 100px -10px rgb(0, 0, 0);
+  -moz-box-shadow: inset 0 -190px 100px -10px rgb(0, 0, 0);
 }
 
 .backdropContent {
@@ -19,8 +22,8 @@
   text-align: center;
   color: #fff;
   bottom: 0;
-  background-color: rgb(0, 0, 0, 1);
-  box-shadow: 0 0 100px 50px rgb(0, 0, 0, 1);
+  /* background-color: rgb(0, 0, 0, 1); */
+  /* box-shadow: 0 0 100px 50px rgb(0, 0, 0, 1); */
 }
 .backdropContent > div {
   position: relative;
