--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -1,16 +1,16 @@
 div.containerRegister {
-  /* position: relative; */
-  margin-left: 30rem;
-  max-width: 60rem;
+  position: relative;
+  /* margin-left: 30rem; */
+  /* max-width: 60rem; */
   /* border: 2 px solid white; */
   /* position: relative; */
   /* padding-left: 30rem; */
-  margin-left: 30rem;
+  margin-left: 50rem;
   /* padding-right: 8rem; */
   padding-bottom: 8rem;
   /* margin-left: 19rem; */
-  max-width: 60rem;
-  min-height: 50rem;
+  width: 30rem;
+  height: 50rem;
   margin-bottom: -10rem;
 }
 
