--- a/client/src/components/admin/admin.css
+++ b/client/src/components/admin/admin.css
@@ -33,7 +33,9 @@
   width: 100%;
 }
 
-div.slider-control-centerleft button,
+div.slider-control-centerleft button {
+  margin-left: -1.5rem;
+}
 div.slider-control-centerright button {
   /* display: none; */
 }
@@ -42,14 +44,12 @@ div.slider.carousel {
   /* position: absolute; */
   /* right: -38rem; */
   top: -2.5rem;
+  left: 1rem;
   /* width: 100%; */
   /* height: auto; */
   /* box-sizing: border-box; */
   /* visibility: inherit; */
 }
-/* div.slider-frame ul.slider-list li.slider-slide .slide-visible {
-  left: 3660px;
-} */
 
 div.slider-control-bottomcenter > ul > li {
   top: 4rem;
