--- a/client/src/components/users/users.css
+++ b/client/src/components/users/users.css
@@ -40,7 +40,7 @@ h1.title {
   overflow-y: scroll;
 }
 .ui.bottom.attached.button.deleteButton {
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
   width: 15rem;
 }
 .ui.green.bottom.attached.button.updateButton {
@@ -50,4 +50,18 @@ h1.title {
 }
 .ui.bottom.attached.button.closeButton {
   width: 15rem;
+}
+
+.popupUser {
+  overflow-y: scroll;
+  position: fixed;
+  padding-top: 0.5rem;
+
+  z-index: 10;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
 }
