--- a/client/src/components/movies/movies.css
+++ b/client/src/components/movies/movies.css
@@ -68,12 +68,15 @@ h1.titlePopupDb {
   color: white;
 }
 .ui.purple.basic.button.loadMoreBtn {
-  margin-top: 5rem;
+  margin-top: 20rem;
   width: 20rem;
+  z-index: 100;
 }
 .loadMoreBtnContainer {
   text-align: center;
   margin-left: 10rem;
+  margin-top: 10rem;
+  margin-bottom: -5rem;
 }
 
 .popup {
