--- a/client/src/components/movies/movies.css
+++ b/client/src/components/movies/movies.css
@@ -32,12 +32,13 @@ div.addMovie {
 div.searchContainer {
   text-align: center;
 }
-.crowRating {
+.crowRating,
+.description {
   font-weight: 400;
-  margin-left: 10px;
+  /* margin-left: 10px;
   min-width: 3rem;
   display: inline-block;
-  padding: 1px 10px;
+  padding: 1px 10px; */
 }
 
 .ui.basic.purple.button,
@@ -93,9 +94,10 @@ h1.titlePopupDb {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
-div.ui.buttons.addMovieBtnGroup {
+.ui.buttons.addMovieBtnGroup {
   position: relative;
-  bottom: -2rem;
+  float: right;
+  bottom: 0;
 }
 
 .ui.inverted.black.segment {
@@ -133,12 +135,11 @@ div.ui.bottom.attached.button.deleteButtonPopup {
 [contenteditable="true"]:active,
 [contenteditable="true"]:focus {
   border: none;
+  /* border: 1px solid white; */
   outline: none;
+  /* display: inline-block; */
 }
 
-[contenteditable="true"]:focus > style {
-  display: block;
-}
 .ui.attached.buttons .button {
   padding: 10px 5px;
   left: 4%;
