--- a/client/src/components/seating/seatingTwo.css
+++ b/client/src/components/seating/seatingTwo.css
@@ -1,19 +1,24 @@
 .cinemaBackground {
-  padding: 1rem;
+  padding: 1rem 4rem;
   width: 100%;
   height: 100vh;
   background-color: rgb(0, 0, 0);
   color: #fff;
 }
 .bookingContainer {
-  width: 90%;
+  width: 100%;
   height: auto;
   margin: auto;
+  display: flex;
+  /* padding: 2rem; */
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
+
   /* position: relative; */
 }
 
 .seatingContainer {
-  width: 40%;
+  width: 35%;
   margin: 1rem;
   min-width: 450px;
   /* position: absolute; */
