--- a/client/src/components/seating/seatingTwo.css
+++ b/client/src/components/seating/seatingTwo.css
@@ -1,25 +1,27 @@
 .cinemaBackground {
-  padding: 1rem 4rem;
+  padding: 2rem 4rem;
   width: 100%;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   background-color: rgb(0, 0, 0);
   color: #fff;
 }
-.bookingContainer {
-  width: 100%;
-  height: auto;
-  margin: auto;
+.cinemaWrapper {
   display: flex;
-  /* padding: 2rem; */
-  /* flex-wrap: wrap; */
   justify-content: space-between;
-
-  /* position: relative; */
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+.bookingContainer {
+  width: 50%;
+  height: 100%;
+  /* margin: auto; */
 }
 
 .seatingContainer {
   width: 35%;
-  margin: 1rem;
+  /* margin: 1rem; */
   min-width: 450px;
   /* position: absolute; */
   /* left: 2rem; */
