--- a/client/src/components/admin/monMovies/monMovies.css
+++ b/client/src/components/admin/monMovies/monMovies.css
@@ -37,6 +37,7 @@ h1.title {
   /* position: relative; */
   margin: 0 40rem;
   width: 50rem;
+  height: auto;
   /* width: 100%; */
   margin-top: 5rem;
   margin-bottom: -2rem;
@@ -59,7 +60,7 @@ h1.title {
   position: relative; */
   background-color: #f8f8ff;
   margin-top: -5rem;
-  height: 70rem;
+  height: auto;
   margin-bottom: -25rem;
 }
 
@@ -74,7 +75,7 @@ h1.title {
 }
 
 .containerMonMoviesList .ui.segment:last-child {
-  margin-bottom: -4rem;
+  margin-bottom: 1rem;
 }
 
 .containerMonMoviesCreate .ui.segment.timeAndDate {
