guestAccount fixed, trailer added, api-key hidden

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -241,7 +241,9 @@ img {
   font-weight: 100;
   text-decoration: underline;
   /* bottom: -10rem; */
-  position: absolute;
+  /* position: absolute; */
+  float: right;
+  margin-right: 60%;
   /* left: 40%; */
 }
 .footerLinks > a > li {
