changepasword page updated working on remove booking api

--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -1,4 +1,4 @@
-.profileInfoContainer {
+/* .profileInfoContainer {
   width: 50rem;
   position: relative;
   margin: 0 auto;
@@ -6,13 +6,13 @@
 .ui.buttons.profileButtons {
   position: relative;
   /* left: -4.5rem; */
-}
+/*}
 .changePassword {
   /* border: 2px solid hotpink; */
-  /* background-color: #f8f8ff; */
-  padding-bottom: 11.5rem;
-  margin-bottom: -7rem;
-}
+/* background-color: #f8f8ff; */
+/* padding-bottom: 11.5rem; */
+/* margin-bottom: -7rem; */
+/*}
 
 .ui.blue.bottom.attached.button.linkedButton {
   width: 15rem;
@@ -59,4 +59,4 @@ div.field.loginField {
 
 .changePasswordField > label {
   float: left;
-}
+} */
