--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,13 +75,13 @@ img {
   margin-left: auto; */
   width: 100%;
   /* padding-top: 3rem; */
-  padding-bottom: 6rem;
+  /* padding-bottom: 6rem; */
   /* background-color: #f8f8ff; */
   background-color: black;
   /* padding-right: 15px; */
-  margin-bottom: -45px;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-bottom: -45px; */
+  /* margin-right: auto; */
+  /* margin-left: auto; */
 }
 
 .text-center {
