--- a/client/src/components/admin/monMovies/monMovies.css
+++ b/client/src/components/admin/monMovies/monMovies.css
@@ -39,8 +39,8 @@ h1.title {
   width: 50rem;
   height: auto;
   /* width: 100%; */
-  margin-top: 5rem;
-  margin-bottom: -2rem;
+  /* margin-top: 5rem; */
+  /* margin-bottom: -2rem; */
   padding-top: 2rem;
   padding-bottom: 2rem;
   /* position: relative; */
@@ -48,21 +48,22 @@ h1.title {
   /* border: 3px solid pink; */
 }
 
-.containerMonMoviesCreateBackground {
+/* .containerMonMoviesCreateBackground {
   /* position: relative; */
-  /* margin: 0 40rem;
+/* margin: 0 40rem;
   width: 50rem; */
-  /* width: 100%; */
-  /* margin-top: 2rem;
+/* width: 100%; */
+/* margin-top: 2rem;
   margin-bottom: -2rem;
   padding-top: 2rem;
   padding-bottom: 3rem;
-  position: relative; */
+  position: relative; 
+  padding: 1rem;
   background-color: #f8f8ff;
-  margin-top: -5rem;
+  /* margin-top: -5rem;
   height: auto;
-  margin-bottom: -25rem;
-}
+  margin-bottom: -25rem; 
+} */
 
 .monMovies {
   background-color: #f8f8ff;
