--- a/client/src/components/seating/seatingTwo.css
+++ b/client/src/components/seating/seatingTwo.css
@@ -75,6 +75,7 @@
 
 .seatingInfo {
   margin-top: 2rem;
+  margin-bottom: 1rem;
   width: 100%;
   min-width: 450px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
