--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -18,6 +18,7 @@ div.loginContainer {
   max-width: 30rem;
   margin: 0 auto;
   text-align: center;
+  height: 100vh;
 }
 div.forgotContainer {
   max-width: 30rem;
@@ -28,6 +29,7 @@ div.applyContainer {
   max-width: 30rem;
   margin: 0 auto;
   text-align: center;
+  height: 100vh;
 }
 
 div.formContainer {
