--- a/client/src/components/admin/admin.css
+++ b/client/src/components/admin/admin.css
@@ -12,13 +12,17 @@
 
 .adminhome {
   background-color: #f8f8ff;
-  padding-bottom: 8rem;
-  margin-bottom: -7rem;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .containerAdminHome {
-  margin-left: 30rem;
-  max-width: 60rem;
+  /* display: flex;
+  flex-direction: column; */
+  /* margin-left: 30rem;
+  max-width: 60rem; */
 }
 .adminMovieBackdropContainer {
   height: 100%;
