--- a/client/src/components/users/users.css
+++ b/client/src/components/users/users.css
@@ -29,7 +29,7 @@ h1.title {
   padding: 2rem 2rem;
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 10;
-  /* position: absolute; */
+  position: absolute;
   width: 100%;
   height: 90%;
   top: 10%;
